fix: remove extra whitespace before the grip
The space between the field and the grip is given by the gap of the
parent flex container, the grip should not have a padding on the left.

This is visible on text input field: space between the text input and
the grip should be the same thane between the grip and the right border
of the field.

Part of request #39759: Get Rid of Flaming Parrot in Trackers

--- a/plugins/tracker/scripts/tracker-admin-fields/src/styles/_dragndrop.scss
+++ b/plugins/tracker/scripts/tracker-admin-fields/src/styles/_dragndrop.scss
@@ -50,7 +50,7 @@
 .draggable-handle-container {
     display: flex;
     align-items: center;
-    padding: var(--tlp-small-spacing);
+    padding: 0 var(--tlp-small-spacing) 0 0;
 }
 
 .draggable-handle {
